Add a span.comment highlighting style.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -42,6 +42,9 @@ $background: #ccc
   color: #405056
   span.class
     color: #A47826
+  span.comment
+    color: #92A0A0
+    font-style: italic
   span.constant
     color: #A47826
   span.function
