Set coderay spans to display: block.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -39,6 +39,8 @@ $background: #ccc
     margin-top: 0
 
 @mixin syntax-highlighting
+  span.CodeRay
+    display: block
   color: #405056
   span.class
     color: #A47826
