Re-add the single column style as the default, selecting the wider layout with body.with-margin.
Conflicts:
	site/styles/styles.css.sass

--- a/site/_default.haml
+++ b/site/_default.haml
@@ -22,7 +22,7 @@
         // For discussion and comments, see: http://remysharp.com/2009/01/07/html5-enabling-script/
         (function(){if(!/*@cc_on!@*/0)return;var e = "abbr,article,aside,audio,bb,canvas,datagrid,datalist,details,dialog,eventsource,figure,footer,header,hgroup,mark,menu,meter,nav,output,progress,section,time,video".split(',');for(var i=0;i<e.length;i++){document.createElement(e[i])}})();
 
-  %body{class: slug_for(page)}
+  %body{{class: page.meta["css_class"]},{class: slug_for(page)}}
     %header
       %h1= link('index.html', 'ben hoskings')
       %nav
