Fix figure formatting in IE: those HTML5 elements need display: block.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -92,7 +92,7 @@ body
 strong
   font-weight: bold
 
-header, nav, article, footer
+header, nav, article, footer, figure, figcaption
   display: block
 
 input, textarea, pre, code
