Add :captionedc filter with a couple of new syntax types for C.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -54,8 +54,10 @@ $background: #ccc
     color: #3483C5
   span.keyword
     color: #859926
-  span.predefined-constant
+  span.predefined-constant,
+  span.predefined-type
     color: #3483C5
+  span.char,
   span.string
     background-color: darken($background, 4%)
     span.delimiter
