Syntax highlight ints.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -57,6 +57,8 @@ $background: #ccc
   span.predefined-constant,
   span.predefined-type
     color: #3483C5
+  span.integer
+    color: #D23681
   span.char,
   span.string
     background-color: darken($background, 4%)
