Add side padding to in-article elements to align them with paragraphs.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -333,11 +333,14 @@ body > footer
       float: right
 
 header h1 a,
-article p,
-article li,
 code pre
   padding-left: $padding
   padding-right: $padding
+
+article
+  h1, h2, h3, h4, h5, p, li, aside
+    padding-left: $padding
+    padding-right: $padding
 
 nav
   a
