--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -229,6 +229,9 @@ article
         clear: right
         p
           width: auto
+    aside
+      body.with-margin &
+        font-size: 15px
 
 ul.years
   li
