Fix code size within figcaptions.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -229,6 +229,8 @@ article
         clear: right
         p
           width: auto
+      code
+        font-size: 13px
     aside
       body.with-margin &
         font-size: 15px
