Also size asides at 15px outside the wide margin.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -231,9 +231,8 @@ article
           width: auto
       code
         font-size: 13px
-    aside
-      body.with-margin &
-        font-size: 15px
+    aside, body.with-margin & aside
+      font-size: 15px
 
 ul.years
   li
