Set a fixed line-height for asides to match paragraph rhythm.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -233,6 +233,7 @@ article
         font-size: 13px
     aside, body.with-margin & aside
       font-size: 15px
+      line-height: $leading
 
 ul.years
   li
