--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -188,6 +188,8 @@ article
     aside,
     aside p
       color: lighten($color, 25%)
+      &:last-child
+        margin-bottom: 0
     >pre,
     >figure
       clear: both
