Try inline code at normal weight, black, with a light border.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -279,8 +279,10 @@ code
   line-height: $code_leading
   @include radius
   p &, li &
-    font-weight: bold
+    color: black
     white-space: nowrap
+    border: #bbb 1px solid
+    padding: 0 0.5ex
   pre &
     display: block
 
