Slightly lighter background.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -16,7 +16,7 @@ $link-color: #e13d87
 $title-color: #197a9f
 $date-color: #777
 $meta-color: #999
-$background: #ccc
+$background: #d2d2d2
 
 @font-face
   font-family: 'PixChicago'
