Fit images in the aside.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -231,6 +231,11 @@ article
         clear: right
         p
           width: auto
+        img
+          width: $aside-width - ($leading * 2)
+          margin-top: $leading * 0.3
+          border: none
+          border-radius: 2px
       code
         font-size: 13px
     aside, body.with-margin & aside
